# lynx-static-lib

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  agent.md  conanfile.py
.gitea/workflows/: windows-build.yml
.github/workflows/: windows-build.yml
demo/: CMakeLists.txt  CMakePresets.json  README.md  conanfile.py
demo/bundle/: lynx.config.mjs  package.json  pnpm-lock.yaml
demo/bundle/src/: index.tsx  styles.scss
demo/profiles/: windows-msvc-static
demo/src/: lynx_static_demo.cc
http/: CMakeLists.txt  conanfile.py
http/include/lynxlib/: http_service.h
http/src/: curl_http_service.cc
http/test_package/: CMakeLists.txt  conanfile.py  test_package.cc
patches/lynx/: 0001-windows-clang22-napi-typedarray-sentinel.patch  0002-windows-static-link-exports.patch  0003-windows-skip-debugger-dlls-for-static-ci.patch  0004-desktop-fetch-empty-body-bridge.patch  0005-desktop-core-js-loader-returns-source.patch  README.md
patches/quickjs-src/: 0001-windows-static-link-exports.patch
runtime/: conanfile.py
runtime/cmake/: lynxlib-runtime.cmake
scripts/: Build-DemoBundle.ps1  Build-LynxWindows.ps1  Invoke-CMake.ps1  Sync-LynxDeps.ps1  build_conan_demo.py  build_demo_bundle.py  build_lynx.py  check_repository.py  ensure_windows_toolchain.py  invoke_cmake.py  lynx_project.py  lynxlib_common.py  package_conan.py  package_http_conan.py  sync_lynx_deps.py  verify_demo.py
src/: lynxlib_embedded_core_js.cc
